apps/base/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: longhorn.mellor.dev
    kubernetes.io/tls-acme: "true"
  name: longhorn
  namespace: longhorn
spec:
  ingressClassName: internal
  rules:
  - host: longhorn.mellor.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls: 
  - secretName: longhorn.mellor.dev
    hosts:
    - longhorn.mellor.dev
